# DFSPH-2D

./: .gitignore  README.md  dfsph.py  grid.py  main.py  particle.py  pyproject.toml  sph_drawer.py  tester.py
dfsph/: box.py  cst_density_solver.py  dfsph_pressure_solvers.py  drawer.py  drawer_2_gif.py  drawer_ui.py  grid.py  init_helper.py  kernels.py  particle.py  particle_init.py  particles.py  particles_loader.py  sim.py  simulator.py  sph_accelerated.py
dfsph/tests/: grid_tester.py  main_tester.py
tests/: test_box.py  test_grid.py  test_kernels.py  test_particle.py  test_sim.py
